[package]
name = "ttv_emote_profile_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.11"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.6"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "0.6", features = ["serde", "v4"] }
